--- a/07-questions/setup/index.html
+++ b/07-questions/setup/index.html
@@ -18,7 +18,59 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <div class="title"><h2>general questions</h2></div>
+      <div class="section-center">
+        <!-- single question -->
+        <article class="question">
+          <div class="question-title">
+          <p>do you accept all major credit cards?</p>
+          <button class="question-btn">
+            <span class="plus-icon"><i class="far fa-plus-square"></i></span>
+            <span class="minus-icon"><i class="far fa-minus-square"></i></span>
+          </button>
+        </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.</p>
+          </div>
+        </article>
+        <!-- end single question -->
+        <!-- single question -->
+        <article class="question">
+          <div class="question-title">
+          <p>Do you support Local farmers?</p>
+          <button class="question-btn">
+            <span class="plus-icon"><i class="far fa-plus-square"></i></span>
+            <span class="minus-icon"><i class="far fa-minus-square"></i></span>
+          </button>
+        </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.</p>
+          </div>
+        </article>
+        <!-- end single question -->
+        <!-- single question -->
+        <article class="question">
+          <div class="question-title">
+          <p>Do you use organic ingredients?</p>
+          <button class="question-btn">
+            <span class="plus-icon"><i class="far fa-plus-square"></i></span>
+            <span class="minus-icon"><i class="far fa-minus-square"></i></span>
+          </button>
+        </div>
+          <div class="question-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+              dolore illo dolores quia nemo doloribus quaerat, magni numquam
+              repellat reprehenderit.</p>
+          </div>
+        </article>
+        <!-- end single question -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
