--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -13,7 +13,70 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>scroll project</h1>
+    <!-- header -->
+    <header id="home">
+      <!-- navbar -->
+      <nav class="" id="nav">
+        <div class="nav-center">
+          <div class="nav-header">
+            <img src="./logo.svg" alt="logo" class="logo">
+            <button class="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- links -->
+          <div class="links-container">
+            <ul class="links">
+              <li>
+                <a href="#home" class="scroll-link">home</a>
+              </li>
+              <li>
+                <a href="#about" class="scroll-link">about</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+            </ul>            
+          </div>
+        </div>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <div class="contain">
+          <h1>scroll project</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate deserunt, consequatur earum possimus aliquam eius, ducimus tenetur labore qui natus suscipit ex aliquid similique sint doloribus. Perspiciatis, labore iusto.
+          </p>
+          <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
+        </div>
+      </div>
+    </header>
+    <!-- about -->
+    <section class="section" id="about">
+      <div class="title">
+        <h2>about <span>us</span></h2>
+      </div>
+    </section>
+    <!-- services -->
+    <section class="section" id="services">
+      <div class="title">
+        <h2>our <span>services</span></h2>
+      </div>
+    </section>
+    <!-- tours -->
+    <section class="section" id="tours">
+      <div class="title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer class="section"><p>
+      copyright &copy; backroads travel tours company <span id="date">2020</span>
+      .all rights reserved
+    </p></footer>
+    <!-- back to top button  -->
+    <a href="#home" class="scroll-link top-link"><i class="fas fa-arrow-up"></i></a>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
